--- a/Weather.css
+++ b/Weather.css
@@ -80,6 +80,16 @@ nav-content{
     font-weight: bold;
     
 }
+@media (min-width: 576px) {
+    .homeTitle {
+        font-size: 2.5rem;
+    }
+}
+@media (min-width: 768px) {
+    .homeTitle {
+        font-size: 3rem;
+    }
+}
 
 .carousel-container {
     max-width: 75%;
